--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,81 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+header {
+  display: grid;
+  grid-template-rows: repeat(12, 1fr);
+  height: 100vh;
+  background-color: #ef8784;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffffff;
+  margin: 10px;
+  height: 50px;
+  border-radius: 3px;
+  border: #000 2px solid;
+  box-shadow: 6px 3px 4px 0px rgb(0 0 0 / 0.3);
+  width: 80%;
+}
+
+nav .logo {
+  align-content: center;
+  margin-left: 10px;
+}
+
+nav ul {
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  list-style: none;
+  margin-right: 10px;
+}
+
+nav ul a {
+  text-decoration: none;
+  color: black;
+}
+
+.image-container {
+  margin: 20px;
+  grid-row: 2 / 7;
+}
+
+.image-container img {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  border: 2px solid blue;
+  border-radius: 25px;
+}
+
+.hero-title {
+  grid-row: 7 / 10;
+  font-size: 5rem;
+  justify-self: center;
+  text-align: center;
+  letter-spacing: 10px;
+}
+
+.hero-tagline {
+  grid-row: 10 / span 1;
+  justify-self: center;
+  align-content: center;
+  font-size: 1.2rem;
+}
+
+
+
+
+
