--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,21 @@ button:focus-visible {
   box-sizing: border-box;
 }
 
+h1,
+h2 {
+  font-family: "Bebas Neue", sans-serif;
+  line-height: 1;
+}
+
+h3 {
+  font-family: "Montserrat", sans-serif;
+}
+
+p,
+a {
+  font-family: "Roboto", sans-serif;
+}
+
 header {
   display: grid;
   grid-template-rows: repeat(12, 1fr);
@@ -121,7 +136,9 @@ nav ul a {
 }
 
 .image-container h1.hero-title {
-  font-size: 5rem;
+  font-size: 10rem;
+  letter-spacing: 10px;
+  color: #849cef;
 }
 
 
@@ -193,7 +210,6 @@ nav ul a {
   grid-row: 4 / span 3;
   row-gap: 20px;
   column-gap: 20px;
-  justify-content: center;
 }
 
 .about-cards {
@@ -233,4 +249,45 @@ nav ul a {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+/* News Letter */
+
+.discord {
+  display: grid;
+  align-items: center;
+  height: 400px;
+  background-color: #849cef;
+  grid-template-columns: 1fr 1fr;
+}
+
+.discord-title h2 {
+  font-size: 5rem;
+  margin-left: 30px;
+}
+
+.discord-title p {
+  font-size: 1.2rem;
+  margin-left: 30px;
+}
+
+.discord-button {
+  justify-self: center;
+}
+
+.discord-button a {
+  text-decoration: none;
+  background-color: #f9f6f1;
+  color: #000;
+  padding: 20px 40px 20px 40px;
+  border-radius: 12px;
+  font-size: 1.2rem;
+  box-shadow: 5px 5px black;
+}
+
+.discord-button a:hover {
+  color: #000;
+  background-color: #5e81ff;
+  transform: scale(2);
+  transition: 200ms ease-in;
 }
