--- a/src/index.css
+++ b/src/index.css
@@ -91,11 +91,11 @@ a {
 
 header {
   display: grid;
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-rows: repeat(5, 1fr);
   height: 100vh;
   background: url(./assets/headerbg.webp);
   background-size: cover;
-  border-image: fill 1 linear-gradient(rgba(255, 154, 154, 0.5), rgba(147, 169, 255, 0.5));
+  border-image: fill 1 linear-gradient(rgba(255, 154, 154, 0.7), rgba(147, 169, 255, 0.7));
 }
 
 nav {
@@ -127,6 +127,22 @@ nav ul a {
   color: black;
 }
 
+.hero-button {
+  grid-row: 3 / span 1;
+  align-self: center;
+  border-radius: 10px;
+  margin-top: 50px;
+}
+
+a.hero-button{
+  background-color: #f8ebeb;
+  width: fit-content;
+  padding: 20px 40px 20px 40px;
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+}
+
 .image-container {
   display: flex;
   justify-content: center;
@@ -138,7 +154,12 @@ nav ul a {
 .image-container h1.hero-title {
   font-size: 10rem;
   letter-spacing: 10px;
-  color: #849cef;
+  color: #325fff;
+}
+
+.image-container p.hero-tagline {
+  font-size: 1.2rem;
+  color: #e3dff2;
 }
 
 
@@ -158,7 +179,7 @@ nav ul a {
 }
 
 .how-title h2 {
-  font-size: 6rem;
+  font-size: 8rem;
   margin-left: 30px;
 }
 
@@ -285,9 +306,14 @@ nav ul a {
   box-shadow: 5px 5px black;
 }
 
+.discord-button i {
+  padding-right: 5px;
+}
+
 .discord-button a:hover {
-  color: #000;
+  color: #fff;
   background-color: #5e81ff;
   transform: scale(2);
+  box-shadow: 0px 0px;
   transition: 200ms ease-in;
 }
